--- a/_frc/6700/6709.md
+++ b/_frc/6700/6709.md
@@ -3,13 +3,16 @@ title: FRC Team 6709
 team:
   type: FRC
   number: 6709
-  name: Spudinc
+  name: S.P.U.D. Inc
   rookie_year: 2017
   location: Big Lake, Minnesota, USA
   sponsors:
-  - Big Lake Senior High
+  - Big Lake Schools
+  - SpudFest
+  - UMC
   links:
-    Website:
+    Website: www.spudincrobotics.com
+    
 ---
 
 {% include remove_this_line_and_add_a_paragraph %}
